--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <div class="container-fluid">
 
     <div class="jumbotron jumbotron-fluid">
-      <!-- <img src="assets/Img/img-menu.jpg" alt="Image menu" width="300px" height="<3></3>00px"> -->
       <div class="text-center">
         <h1>MICKAEL BAGUET</h1>
         <p>DEVELOPPEUR WEB JUNIOR JUNIOR</p>
@@ -181,46 +180,25 @@
     </div>
 
     <footer>
-      <div class="d-flex justify-content-around bg-primary">
+
+      <div class="entete row d-flex justify-content-center">
+        <div class="arrondi">
+          <h1 class="textentete">CONTACT</h1>
+        </div>
+      </div>
+      <div class="d-flex justify-content-around mb-3">
         <div class="p-2">
           <a href="mailto:baguetmickael@gmail.com">
-          <img src="assets/Img/icon-mail.png" alt="Icon Email" height="50" width="50" ><p>Mail</p>
+          <img src="assets/Img/icon-mail.png" alt="Icon Email" height="50" width="50" ><p></p>
           </a>
         </div>
-        <div class="p-2"><img src="assets/Img/icon-tel.png" alt="Icon Tel" height="50" width="50"></div>
+        <div class="p-2 text-center"><img src="assets/Img/icon-tel.png" alt="Icon Tel" height="50" width="50"><p>06.28.64.09.83</p></div>
         <div class="p-2"><a href="https://github.com/MickaelBaguet?tab=repositories"><img src="assets/Img/icon-git.png" alt="Icon Git" height="50" width="50"></a></div>
       </div>
 
-
-
-
     </footer>
 
-
-    <div id="cCont" id="#contact">
-
-        <h2>Contact</h2>
-
-      <div id="mail">
-        <a href="mailto:baguetmickael@gmail.com">
-          <img src="assets/Img/icon-mail.png" alt="Icon Email" height="50" width="50" >
-        </a>
-        <p>Mail</p>
-      </div>
-
-      <div id="tel">
-        <img src="assets/Img/icon-tel.png" alt="Icon Tel" height="50" width="50">
-        <p>06.28.64.09.83</p>
-      </div>
-
-      <div id="git">
-        <a href="https://github.com/MickaelBaguet?tab=repositories"><img src="assets/Img/icon-git.png" alt="Icon Git" height="50" width="50"></a>
-        <p>GitHub</p>
-      </div>
-
-    </div>
-
-  </div>
+</div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
