--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="p-2 border flex-fill fondRouge blanc arrondiG shadow">Juillet 2017 - Juin 2017</div>
           </div>
           <ul>
-            <li class="p-4">Accueil le public et le renseigne, conseiller la personne, aider les personnes lors de démarches numériques au sein du Pôle-Emploi d'Abbeville.</li>
+            <li class="p-4 exp">Accueil le public et le renseigne, conseiller la personne, aider les personnes lors de démarches numériques au sein du Pôle-Emploi d'Abbeville.</li>
           </ul>
         </div>
 
@@ -124,7 +124,7 @@
             <div class="p-2 border flex-fill fondRouge blanc arrondiG shadow">Septembre 2015 - Mai 2016</div>
           </div>
           <ul>
-            <li class="p-4">Réception et traitements des documents administratifs, mise à jour des procédures administratives, appels et prise de rendez-vous auprès de demandeurs d’emplois.</li>
+            <li class="p-4 exp">Réception et traitements des documents administratifs, mise à jour des procédures administratives, appels et prise de rendez-vous auprès de demandeurs d’emplois.</li>
           </ul>
         </div>
 
