--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 
         <div class="">
           <div class="container d-flex flex-row justify-content-center ">
-            <div class="p-2 col-8 border flex-fill fondRouge blanc arrondiD shadow ">Gestionnaire</div>
+            <div class="p-2 col-8 border d-flex flex-fill fondRouge blanc arrondiD shadow justify-content-center align-items-center">
+              <span>Gestionnaire</span>
+            </div>
             <div class="p-2 border flex-fill fondRouge blanc arrondiG shadow">Avril 2017 - Décembre 2017</div>
           </div>
           <ul>
@@ -110,7 +112,9 @@
 
         <div class="">
           <div class="container d-flex flex-row justify-content-center">
-            <div class="p-2 col-8 border flex-fill fondRouge blanc arrondiD shadow">Agent administratif</div>
+            <div class="p-2 col-8 border d-flex justify-content-center align-items-center flex-fill fondRouge blanc arrondiD shadow">
+              <span>Agent administratif</span>
+            </div>
             <div class="p-2 border flex-fill fondRouge blanc arrondiG shadow">Juillet 2017 - Juin 2017</div>
           </div>
           <ul>
@@ -120,7 +124,9 @@
 
         <div class="">
           <div class="container d-flex flex-row justify-content-center">
-            <div class="p-2 col-8 border flex-fill fondRouge blanc arrondiD shadow">Animateur service numérique</div>
+            <div class="p-2 col-8 border d-flex justify-content-center align-items-center flex-fill fondRouge blanc arrondiD shadow">
+              <span>Animateur service numérique</span>
+            </div>
             <div class="p-2 border flex-fill fondRouge blanc arrondiG shadow">Septembre 2015 - Mai 2016</div>
           </div>
           <ul>
@@ -213,7 +219,7 @@
     </section>
 
     <section id="4">
-      <div class="cForm ">
+      <div class="cForm pb-3">
         <!-- Titre de la section -->
         <div class="entete row d-flex justify-content-center">
           <div class="arrondi">
